@@ -12,6 +12,7 @@
  * avoid instantiating DatabaseDescriptor in JDBC (CASSANDRA-2694)
  * fix potential stack overflow during compaction (CASSANDRA-2626)
  * clone super columns to avoid modifying them during flush (CASSANDRA-2675)
+ * reset underlying iterator in EchoedRow constructor (CASSANDRA-2653)
 
 
 0.8.0-rc1
